last homework 6 modul

--- a/catalog/templates/home.html
+++ b/catalog/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_catalog.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="row text-center">
