--- a/catalog/templates/product_detail.html
+++ b/catalog/templates/product_detail.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'base_catalog.html' %}
 {% block content %}
 <div class="row text-center">
         <div class="col-3">
