--- a/catalog/templates/home.html
+++ b/catalog/templates/home.html
@@ -1,6 +1,8 @@
 {% extends 'base_catalog.html' %}
 {% load my_tags %}
 {% block content %}
+
+<a href="{% url 'catalog:create' %}" class="btn btn-lg btn-block btn-outline-primary mb-4">Добавить Продукт</a>
 <div class="row text-center">
     {% for product in products %}
         <div class="col-3">
@@ -10,6 +12,8 @@
                         <h5 class="card-title">{{ product.name_product }}</h5>
                         <p class="card-text">{{ product.description }}</p>
                         <a href="{% url 'catalog:product' product.pk %}" class="btn btn-primary">Посмотреть</a>
+                        <a href="{% url 'catalog:update' product.pk %}" class="btn btn-secondary">Редактировать</a>
+                        <a href="{% url 'catalog:delete' product.pk %}" class="btn btn-danger">Удалить</a>
                     </div>
             </div>
         </div>
