--- a/catalog/templates/product_detail.html
+++ b/catalog/templates/product_detail.html
@@ -14,7 +14,8 @@
                         <li>Создан: {{ product.created_at }}</li>
                         <li>Обновлен: {{ product.updated_at }}</li>
                     </ul>
-                    <button type="button" class="btn btn-lg btn-block btn-outline-primary">Купить</button>
+                    <a href="#" class="btn btn-outline-primary">Купить</a>
+                    <a href="{% url 'catalog:home' %}" class="btn btn-outline-secondary">Назад</a>
                 </div>
             </div>
         </div>
